minor fixes; add persons api draft
